--- a/portfolio.html
+++ b/portfolio.html
@@ -19,36 +19,38 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
               <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html" target="_self" rel="stylesheet">About Me</a>
+                    </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="/about-me/" target="_self" rel="stylesheet">About Me <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="portfolio.html" target="_self">Portfolio<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html" target="#">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html" target="_self">Contact</a>
                     </li>
                  </ul>
             </div>
         </nav>
     </header>
-    <div class="about-me">
+
+    <div class="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
                     <div class="page-header">
-                        <h>About Me</h>
+                        <h>Portfolio</h>
                         <hr>
                     </div>
                 </div>
             </div>
-
-            <div class="row d-inline">
-                <div class="col-lg-8">
-                    <p style="display: inline;">
-                        <img src="http://placehold.it/150x150" alt="My Picture" class="img-thumbnail float-left mr-2 mb-1">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum tristique, nibh erat feugiat libero, sit amet fringilla mauris velit in mi. Duis tempus felis vitae felis vulputate pretium. Nullam commodo, est ac auctor ornare, eros nisi fringilla sem, non pulvinar tortor lorem sit amet sem. Aenean quis erat facilisis, porttitor ex cursus, luctus enim. Curabitur et metus in lacus tristique sagittis et in lorem. Nunc id nisi et neque fringilla ultricies. Aenean at feugiat elit, a posuere justo. Pellentesque egestas dolor et nisi venenatis, nec fermentum urna fringilla. Etiam efficitur porta purus, id posuere sem congue a.
-                    </p>
+            
+            <div class="row">
+                <div class="col-lg-8 d-lg-inline">
+                    <img src="http://placehold.it/350x350" alt="My Picture" class="img-thumbnail">
+                    <img src="http://placehold.it/350x350" alt="My Picture" class="img-thumbnail">
+                    <img src="http://placehold.it/350x350" alt="My Picture" class="img-thumbnail">
+                    <img src="http://placehold.it/350x350" alt="My Picture" class="img-thumbnail">
+                    <img src="http://placehold.it/350x350" alt="My Picture" class="img-thumbnail">
                 </div>
             </div>
         </div>
@@ -62,5 +64,4 @@
             </div>
     </footer>
 </body>
-
 </html>
