--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -7,7 +7,7 @@
     <title>Kennedy Oginga</title>
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <body style="background-image: url(https://www.dreamtemplate.com/dreamcodes/bg_images/light/l3.jpg);">
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarText">
               <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html" target="_self" rel="stylesheet">About Me</a>
+                        <a class="nav-link" href="../index.html" target="_self" rel="stylesheet">About Me</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="portfolio.html" target="#">Portfolio</a>
