--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <div class="collapse navbar-collapse" id="navbarText">
               <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/about-me/" target="_self" rel="stylesheet">About Me <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html" target="_self" rel="stylesheet">About Me <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html" target="#">Portfolio</a>
+                        <a class="nav-link" href="./HTML/portfolio.html" target="#">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="./HTML/contact.html">Contact</a>
                     </li>
                  </ul>
             </div>
