made some modification to all the html and css files.

--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -37,10 +37,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
-                    <div class="page-header">
-                        <h>Portfolio</h>
-                        <hr>
-                    </div>
+                    <h1>Portfolio</h1>
+                    <hr>
                 </div>
             </div>
             
