--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -23,10 +23,10 @@
                         <a class="nav-link" href="../index.html" target="_self" rel="stylesheet">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html" target="#">Portfolio</a>
+                        <a class="nav-link" href="portfolio.html" target="_self">Portfolio</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="contact.html" target="_self">Contact<span class="sr-only">(current)</span></a>
                     </li>
                  </ul>
             </div>
@@ -37,10 +37,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="page-header">
-                        <h>Contact</h>
-                        <hr>
-                    </div>
+                    <h1>Contact</h1>
+                    <hr>
                 </div>
             </div>
 
