--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                         <a class="nav-link" href="index.html" target="_self" rel="stylesheet">About Me <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./HTML/portfolio.html" target="#">Portfolio</a>
+                        <a class="nav-link" href="./HTML/portfolio.html" target="_self">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./HTML/contact.html">Contact</a>
+                        <a class="nav-link" href="./HTML/contact.html" target="_self">Contact</a>
                     </li>
                  </ul>
             </div>
@@ -36,10 +36,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
-                    <div class="page-header">
-                        <h>About Me</h>
-                        <hr>
-                    </div>
+                    <h1>About Me</h1>
+                    <hr>
                 </div>
             </div>
 
