made final changes to the html files and deleted the css.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body style="background-image: url(https://www.dreamtemplate.com/dreamcodes/bg_images/light/l3.jpg);">
     <header class="name">
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: grey;">
-            <a class="navbar-brand" href="#">Kennedy Oginga</a>
+            <a class="navbar-brand font-weight-bold" href="#">Kennedy Oginga</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -33,18 +33,18 @@
         </nav>
     </header>
     <div class="about-me">
-        <div class="container">
+        <div class="container border w-50 p-10" style="background-color: white; margin-top: 100px;">
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-10">
                     <h1>About Me</h1>
                     <hr>
                 </div>
             </div>
 
-            <div class="row d-inline">
-                <div class="col-lg-8">
+            <div class="row">
+                <div class="col-lg-10 mb-5" style="display: inline;">
+                    <img src="https://placehold.it/150x150" alt="My Picture" class="img-responsive float-left mr-2 mb-1">
                     <p style="display: inline;">
-                        <img src="http://placehold.it/150x150" alt="My Picture" class="img-thumbnail float-left mr-2 mb-1">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum tristique, nibh erat feugiat libero, sit amet fringilla mauris velit in mi. Duis tempus felis vitae felis vulputate pretium. Nullam commodo, est ac auctor ornare, eros nisi fringilla sem, non pulvinar tortor lorem sit amet sem. Aenean quis erat facilisis, porttitor ex cursus, luctus enim. Curabitur et metus in lacus tristique sagittis et in lorem. Nunc id nisi et neque fringilla ultricies. Aenean at feugiat elit, a posuere justo. Pellentesque egestas dolor et nisi venenatis, nec fermentum urna fringilla. Etiam efficitur porta purus, id posuere sem congue a.
                     </p>
                 </div>
@@ -52,12 +52,12 @@
         </div>
     </div>
 
-    <footer class="bd-footer text-center">
-        <div class="container-flud p-3 p-md-5">
-                <p class="copyright">
-                    &copy; Copyright 2020
-                </p>
-            </div>
+    <footer class="bd-footer text-center" style="background-color: grey; margin-top: 400px;">
+        <div class="container">
+            <p class="copyright">
+                &copy; Copyright 2020
+            </p>
+        </div>
     </footer>
 </body>
 
