--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -13,7 +13,7 @@
 <body style="background-image: url(https://www.dreamtemplate.com/dreamcodes/bg_images/light/l3.jpg);">
     <header class="name">
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: grey;">
-            <a class="navbar-brand" href="#">Kennedy Oginga</a>
+            <a class="navbar-brand font-weight-bold" href="../index.html">Kennedy Oginga</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -34,35 +34,41 @@
     </header>
 
     <div class="contact">
-        <div class="container">
+        <div class="container border w-50 p-10" style="background-color: white; margin-top: 100px;">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-8" style="margin: auto;">
                     <h1>Contact</h1>
                     <hr>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-8" style="margin: auto;">
                     <form>
                         <div class="form-row">
-                            <input type="text" class="form-control" placeholder="First name">
+                            <label for="formGroupExampleInput">Name</label>
+                            <input type="text" class="form-control" placeholder="Name">
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-row">
+                            <label for="inputEmail4">Email</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email">
+                        </div>
+
+                        <div class="form-row">
                             <label for="exampleFormControlTextarea1">Message</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            <textarea class="form-control mb-5" id="exampleFormControlTextarea1" rows="4" placeholder="Message"></textarea>
                         </div>
                     
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary" style="margin-bottom: 20px;">Submit</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 
-    <footer class="bd-footer text-center">
-        <div class="container-flud p-3 p-md-5">
+    <footer class="bd-footer text-center" style="background-color: grey; margin-top: 350px;">
+        <div class="container">
             <p class="copyright">
                 &copy; Copyright 2020
             </p>
