--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -13,7 +13,7 @@
 <body style="background-image: url(https://www.dreamtemplate.com/dreamcodes/bg_images/light/l3.jpg);">
     <header class="name">
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: grey;">
-            <a class="navbar-brand" href="#">Kennedy Oginga</a>
+            <a class="navbar-brand font-weight-bold" href="../index.html">Kennedy Oginga</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -33,8 +33,8 @@
         </nav>
     </header>
 
-    <div class="portfolio">
-        <div class="container">
+    <div class="portfolio mt-5">
+        <div class="container border" style="background-color: white;">
             <div class="row">
                 <div class="col-lg-8">
                     <h1>Portfolio</h1>
@@ -43,7 +43,7 @@
             </div>
             
             <div class="row">
-                <div class="col-lg-8 d-lg-inline">
+                <div class="col-lg-8 d-lg-inline mb-5">
                     <img src="http://placehold.it/350x350" alt="My Picture" class="img-thumbnail">
                     <img src="http://placehold.it/350x350" alt="My Picture" class="img-thumbnail">
                     <img src="http://placehold.it/350x350" alt="My Picture" class="img-thumbnail">
@@ -54,12 +54,12 @@
         </div>
     </div>
 
-    <footer class="bd-footer text-center">
-        <div class="container-flud p-3 p-md-5">
-                <p class="copyright">
-                    &copy; Copyright 2020
-                </p>
-            </div>
+    <footer class="bd-footer text-center" style="background-color: grey; margin-top: 350px;">
+        <div class="container">
+            <p class="copyright">
+                &copy; Copyright 2020
+            </p>
+        </div>
     </footer>
 </body>
 </html>
