made some changes to the portfolio.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body style="background-image: url(https://www.dreamtemplate.com/dreamcodes/bg_images/light/l3.jpg);">
+<body class = "bg-image">
     <header class="name">
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: grey;">
-            <a class="navbar-brand font-weight-bold" href="#">Kennedy Oginga</a>
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: transparent;">
+            <a class="navbar-brand" href="#">Kennedy Oginga</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -33,19 +33,24 @@
         </nav>
     </header>
     <div class="about-me">
-        <div class="container border w-50 p-10" style="background-color: white; margin-top: 100px;">
+        <div class="container border  p-5" style="background-color: transparent; margin-top: 90px;">
             <div class="row">
-                <div class="col-lg-10">
+                <div class="col-12">
                     <h1>About Me</h1>
                     <hr>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-lg-10 mb-5" style="display: inline;">
-                    <img src="https://placehold.it/150x150" alt="My Picture" class="img-responsive float-left mr-2 mb-1">
-                    <p style="display: inline;">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum tristique, nibh erat feugiat libero, sit amet fringilla mauris velit in mi. Duis tempus felis vitae felis vulputate pretium. Nullam commodo, est ac auctor ornare, eros nisi fringilla sem, non pulvinar tortor lorem sit amet sem. Aenean quis erat facilisis, porttitor ex cursus, luctus enim. Curabitur et metus in lacus tristique sagittis et in lorem. Nunc id nisi et neque fringilla ultricies. Aenean at feugiat elit, a posuere justo. Pellentesque egestas dolor et nisi venenatis, nec fermentum urna fringilla. Etiam efficitur porta purus, id posuere sem congue a.
+                <div class="col-12 mb-5" style="display: inline;">
+                    <img src="./images/myImage.jpg" alt="My Picture" class="img-responsive float-left mr-2 mb-1" style="height: 100%; width: 60%;">
+                    <p class ="p-about-me" style="display: inline; font-size: 20px; font-weight: 500; background-color: white;">
+                        I am Kennedy Oginga. An upcoming web developer living in Houston, Texas. My background is mostly in oil and gas so I am ccurrently in the process of making
+                        some career changes. I developed interest in coding while taking modeling during my graduate studies at Baylor University studying geology.
+                        That interest drove me to enrol for my second bachelors at Oregon State University studying Computer Science. Currently my core competencies are in:
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li> 
                     </p>
                 </div>
             </div>
