--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kennedy Oginga</title>
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../style.css">
+  
 </head>
 
-<body style="background-image: url(https://www.dreamtemplate.com/dreamcodes/bg_images/light/l3.jpg);">
+<body class = "bg-image">
     <header class="name">
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: grey;">
             <a class="navbar-brand font-weight-bold" href="../index.html">Kennedy Oginga</a>
@@ -34,36 +35,48 @@
     </header>
 
     <div class="contact">
-        <div class="container border w-50 p-10" style="background-color: white; margin-top: 100px;">
+        <div class="container border p-10" style="background-color: white; margin-top: 100px;">
             <div class="row">
-                <div class="col-lg-8" style="margin: auto;">
+                <div class="col" style="margin: auto;">
                     <h1>Contact</h1>
                     <hr>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-lg-8" style="margin: auto;">
-                    <form>
-                        <div class="form-row">
-                            <label for="formGroupExampleInput">Name</label>
-                            <input type="text" class="form-control" placeholder="Name">
+            <section class="page-section" id="services">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-6 text-center">
+                            <div class="mt-5">
+                                <i class="fab fa-4x fa-instagram text-primary mb-4"></i>
+                                <h3 class="h4 mb-2">Instagram</h3>
+                                <p class="text-muted mb-0">Come follow me on Instagram</p>
+                            </div>
                         </div>
-
-                        <div class="form-row">
-                            <label for="inputEmail4">Email</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email">
+                        <div class="col-lg-3 col-md-6 text-center">
+                            <div class="mt-5">
+                                <i class="fab fa-4x fa-linkedin text-primary mb-4"><a href="www.linkedin.com/in/kennedyoginga"></a></a></i>
+                                <h3 class="h4 mb-2">LinkedIn</h3>
+                                <p class="text-muted mb-0">Let's get connected in LinkedIn</p>
+                            </div>
                         </div>
-
-                        <div class="form-row">
-                            <label for="exampleFormControlTextarea1">Message</label>
-                            <textarea class="form-control mb-5" id="exampleFormControlTextarea1" rows="4" placeholder="Message"></textarea>
+                        <div class="col-lg-3 col-md-6 text-center">
+                            <div class="mt-5">
+                                <i class="fab fa-4x fa-facebook-square text-primary mb-4"></i>
+                                <h3 class="h4 mb-2">Facebook</h3>
+                                <p class="text-muted mb-0">Send me a request or follow me on Facebook</p>
+                            </div>
                         </div>
-                    
-                        <button type="submit" class="btn btn-primary" style="margin-bottom: 20px;">Submit</button>
-                    </form>
+                        <div class="col-lg-3 col-md-6 text-center">
+                            <div class="mt-5">
+                                <i class="fab fa-4x fa-github text-primary mb-4"></i>
+                                <h3 class="h4 mb-2">Github</h3>
+                                <p class="text-muted mb-0">Check out some of my work</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
+            </section>
         </div>
     </div>
 
