--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
-<body style="background-image: url(https://www.dreamtemplate.com/dreamcodes/bg_images/light/l3.jpg);">
+<body class = "bg-image">
     <header class="name">
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: grey;">
             <a class="navbar-brand font-weight-bold" href="../index.html">Kennedy Oginga</a>
