--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kennedy Oginga</title>
+    <script src="https://kit.fontawesome.com/e9279bf72f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../style.css">
@@ -48,7 +49,7 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
-                                <i class="fab fa-4x fa-instagram text-primary mb-4"></i>
+                                <i class="fab fa-4x fa-instagram text-primary mb-4" style="color: black;"></i>
                                 <h3 class="h4 mb-2">Instagram</h3>
                                 <p class="text-muted mb-0">Come follow me on Instagram</p>
                             </div>
