--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -14,7 +14,7 @@
 
 <body class = "bg-image">
     <header class="name">
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: grey;">
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: transparent;">
             <a class="navbar-brand font-weight-bold" href="../index.html">Kennedy Oginga</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -36,7 +36,7 @@
     </header>
 
     <div class="contact">
-        <div class="container border p-10" style="background-color: white; margin-top: 100px;">
+        <div class="container border p-10" style="background-color: white; margin-top: 100px; opacity: 100%;">
             <div class="row">
                 <div class="col" style="margin: auto;">
                     <h1>Contact</h1>
@@ -44,7 +44,7 @@
                 </div>
             </div>
 
-            <section class="page-section" id="services">
+            
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-3 col-md-6 text-center">
@@ -65,19 +65,18 @@
                             <div class="mt-5">
                                 <i class="fab fa-4x fa-facebook-square text-primary mb-4"></i>
                                 <h3 class="h4 mb-2">Facebook</h3>
-                                <p class="text-muted mb-0">Send me a request or follow me on Facebook</p>
+                                <p class="text-muted mb-2">Send me a request or follow me on Facebook</p>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="mt-5">
                                 <i class="fab fa-4x fa-github text-primary mb-4"></i>
                                 <h3 class="h4 mb-2">Github</h3>
-                                <p class="text-muted mb-0">Check out some of my work</p>
+                                <p class="text-muted mb-0">Check out my work</p>
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
         </div>
     </div>
 
