--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -12,7 +12,7 @@
 
 <body class = "bg-image">
     <header class="name">
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: grey;">
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: transparent;">
             <a class="navbar-brand font-weight-bold" href="../index.html">Kennedy Oginga</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -44,22 +44,11 @@
             
             <div class="row">
                 <div class="col-lg-8 d-lg-inline mb-5">
-                    <img src="http://placehold.it/350x350" alt="My Picture" class="img-thumbnail">
-                    <img src="http://placehold.it/350x350" alt="My Picture" class="img-thumbnail">
-                    <img src="http://placehold.it/350x350" alt="My Picture" class="img-thumbnail">
-                    <img src="http://placehold.it/350x350" alt="My Picture" class="img-thumbnail">
-                    <img src="http://placehold.it/350x350" alt="My Picture" class="img-thumbnail">
+                    <h2>Burger Logger App</h2>
+                    <button><a href="https://sheltered-waters-40955.herokuapp.com/">Check it Out</a></button>
                 </div>
             </div>
         </div>
     </div>
-
-    <footer class="bd-footer text-center" style="background-color: grey; margin-top: 350px;">
-        <div class="container">
-            <p class="copyright">
-                &copy; Copyright 2020
-            </p>
-        </div>
-    </footer>
 </body>
 </html>
