--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-3" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">Kennedy Oginga</a>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -26,8 +26,8 @@
     </nav>
     <!-- Masthead-->
     <header class="masthead">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center justify-content-center text-center">
+        <div class="container align-items-center" style="height: 400px;">
+            <div class="row justify-content-center text-center">
                 <div class="col-lg-10 align-self-end">
                     <h1 class="text-uppercase text-white font-weight-bold">Welcome to My Website</h1>
                     <hr class="divider my-4"/>
@@ -35,26 +35,55 @@
             </div>
         </div>
     </header>
-    <section class="page-section" id="aboutMe">
-        <div class="container">
+    <div class="page-section" id="aboutMe">
+        <div class="container-fluid">
             <h2 class="text-center">About Me</h2>
             <hr class="divider my-4">
-            <!-- <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                  <div class="col-md-4">
-                    <img src=".." alt="my image about me">
-                  </div>
-                  <div class="col-md-8">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                  </div>
+            <div class="row bg-light align-items-center" style="flex-wrap: wrap; display: flex;">
+                <div class="col-md-4">
+                  <img class="rounded-circle" src="./images/myImage.jpg" alt="my image" style="height: 550px; width: 450px;">
                 </div>
-            </div> -->
+                <div class="col-md-7 text-center">
+                    <div class=" col-10 rounded border border-dark">
+                        <article>
+                            <h5>I'm Kennedy Oginga, currently a computer science student at Oregon State University and also studying Full Stack Web Development at Rice University Coding Bootcamp.</h5>
+                        </article>
+                        <article>
+                            <h5>I am very passionate about web and sofware development. I spend most of my time working with JavaScript and learning new tools and technology
+                                to solve problems.
+                            </h5>
+                        </article>
+                    </div>
+                    <!-- <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6">
+                        <div class="block w-full my-4 text-5xl text-blue-600">
+                            <span class="text-sm block text-gray-700">React.js</span>
+                            <i class="fab fa-react"></i>
+    
+                        </div>
+                        <div class="col-lg-2 text-center">
+                            <span class="mt-5" >
+                                <p class="h4 mb-2">React.js</p>
+                                <i class="fab fa-3x fa-react text-primary mb-4" style="color: green;"></i>
+                            </span>
+                        </div>
+                        <div class="col-lg-2 text-center">
+                            <div class="mt-5">
+                                <p class="h4 mb-2">NodeJS</p>
+                                <i class="fab fa-3x fa-color-green fa-node text-primary mb-4"></i>
+                            </div>
+                        </div>
+                        <div class="col-lg-2 text-center">
+                            <div class="mt-5">
+                                <p class="h4 mb-2">JavaScript</p>
+                                <i class="fab fa-3x fa-js-square text-primary mb-4"></i>
+                            </div>
+                        </div>
+                    </div> -->
+                </div>
+                
+            </div>
         </div>
-    </section>
+    </div>
 
     <section class="page-section" id="services">
         <div class="container">
